--- a/index.html
+++ b/index.html
@@ -842,6 +842,7 @@ boxEl.innerHTML = dates.map(date => {
             ${idx === 0 ? date : ''}
           </div>
           <div>
+           <div style="margin-left:auto; text-align:right;">
             ${r.weight}kg × ${r.reps}회
           </div>
         </div>
