--- a/index.html
+++ b/index.html
@@ -842,9 +842,14 @@ boxEl.innerHTML = dates.map(date => {
           <div style="width:90px;">
             ${idx === 0 ? date : ''}
           </div>
-          <div style="margin-left:auto; text-align:right;">
-            ${r.weight}kg × ${r.reps}회
-          </div>
+             <div
+  class="record-line"
+  data-id="${r.id}"
+  style="margin-left:auto; text-align:right; cursor:pointer;"
+>
+  ${r.weight}kg × ${r.reps}회
+</div>
+
         </div>
       `).join('')}
       <div style="border-bottom:1px solid rgba(255,255,255,0.25); margin-top:6px;"></div>
@@ -856,6 +861,27 @@ boxEl.innerHTML = dates.map(date => {
 
 }
 renderActiveBox();
+let pressTimer = null;
+
+document.addEventListener("mousedown", e => {
+  const target = e.target.closest(".record-line");
+  if (!target) return;
+
+  pressTimer = setTimeout(() => {
+    const ok = confirm("이 기록을 삭제할까요?");
+    if (!ok) return;
+
+    deleteRecord(target.dataset.id);
+  }, 600); // 0.6초 꾹누르기
+});
+
+document.addEventListener("mouseup", () => {
+  clearTimeout(pressTimer);
+});
+
+document.addEventListener("mouseleave", () => {
+  clearTimeout(pressTimer);
+});
 
 /* 기록 추가 (가로 폼에서 저장) */
 recordAdd.addEventListener('click', async ()=>{
@@ -1015,6 +1041,20 @@ try {
 });
 
 
+async function deleteRecord(recordId) {
+  const user = auth.currentUser;
+  if (!user) return;
+
+  await db
+    .collection("users")
+    .doc(user.uid)
+    .collection("records")
+    .doc(recordId)
+    .delete();
+
+  // 화면 갱신
+  loadRecords(); // ← 기존에 쓰고 있는 재로딩 함수
+}
 
  
 
