--- a/index.html
+++ b/index.html
@@ -424,6 +424,15 @@ td, th {
   -webkit-touch-callout: none; /* iOS 복사 메뉴 차단 */
 }
 
+.part-btn {
+  background: #000;
+  color: #fff;
+  border: 1px solid #fff;
+  border-radius: 12px;
+  padding: 14px;
+  font-size: 16px;
+  letter-spacing: 1px;
+}
 
 
 
