--- a/index.html
+++ b/index.html
@@ -433,7 +433,32 @@ td, th {
   font-size: 16px;
   letter-spacing: 1px;
 }
+.exercise-search {
+  width: 100%;
+  height: 36px;          /* ← 핵심 (보통 52~56px에서 줄임) */
+  background: #111;      /* 완전 블랙 ❌ 살짝 밝은 블랙 */
+  color: #fff;
+  border: 1px solid #333;
+  border-radius: 8px;
+  padding: 0 12px;
+  font-size: 14px;
+}
 
+.exercise-search::placeholder {
+  color: #777;
+}
+
+.exercise-search:focus {
+  outline: none;
+  border-color: #fff;
+}
+.search-wrap {
+  margin-bottom: 12px;
+}
+
+   
+/* .css 붙여넣기 */
+   
 
 
    
