--- a/index.html
+++ b/index.html
@@ -602,7 +602,11 @@ input[type="number"] {
 
 </div>
 
-
+<input
+  id="exercise-search"
+  class="exercise-search"
+  placeholder="종목 검색"
+/>
    
 <div id="save3Result"></div>
 <!-- 달력 -->
