--- a/index.html
+++ b/index.html
@@ -784,6 +784,7 @@ input[type="number"] {
             <button data-muscle="등">등</button>
             <button data-muscle="팔">팔</button>
             <button data-muscle="하체">하체</button>
+            <button data-muscle="어깨">어깨</button>
         </div>
     </div>
 </div>
