--- a/index.html
+++ b/index.html
@@ -589,7 +589,9 @@ td, th {
 .toggle-switch.active::after {
   transform: translateX(22px);
 }
-
+.toggle-switch.active ~ .days div.done {
+  font-weight: 400;
+}
    
    
 /* .css 붙여넣기 */
