--- a/index.html
+++ b/index.html
@@ -310,11 +310,10 @@ td, th {
 /* 운동한 날 */
 .days div.done {
   background: linear-gradient(135deg, #8b0000, #400000);
-  color: #f2f2f2;
-  font-weight: 400;        /* 🔥 얇게 */
-  font-size: 12px;         /* 날짜보다 살짝 작게 */
-  letter-spacing: -0.2px; /* 앱 느낌 */
+  color: white;
+  font-weight: 600;
 }
+
 
 
 /* 월 시작 전 진짜 빈칸만 */
