--- a/index.html
+++ b/index.html
@@ -639,6 +639,23 @@ input[type="number"] {
     margin-top: 30px;   /* 기존에 없으면 추가 */
     /* 또는 padding-top: 30px; */
 }
+/* 종목 모드 글씨체 */
+.calendar.muscle-mode .days div {
+  font-family:
+    -apple-system,
+    BlinkMacSystemFont,
+    "SF Pro Text",
+    "Apple SD Gothic Neo",
+    "Noto Sans KR",
+    "Segoe UI",
+    sans-serif;
+}
+
+
+
+   
+
+    /* 스타일 맨밑 */
 </style>
 </head>
 
