--- a/index.html
+++ b/index.html
@@ -654,11 +654,26 @@ input[type="number"] {
    3대 접기 UI
 ================================ */
 .three-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  position: relative;
   margin: 20px 0 10px;
+  text-align: center;
 }
+
+/* 3대 텍스트 */
+#total3 {
+  font-size: 20px;
+  font-weight: 600;
+  color: #FFD700;
+}
+
+/* 오른쪽 버튼 */
+.three-toggle {
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
 
 .three-toggle {
   width: 18px;
