--- a/index.html
+++ b/index.html
@@ -661,9 +661,12 @@ input[type="number"] {
 
 /* 3대 텍스트 */
 #total3 {
-  font-size: 20px;
-  font-weight: 600;
-  color: #FFD700;
+      text-align: center;        /* 가운데 */
+    font-size: 28px;           /* 큼직 */
+    font-weight: 800;          /* 굵게 */
+    letter-spacing: 0.5px;     /* 살짝 고급 */
+    margin: 20px 0 16px;
+    color: #FFD700;
 }
 
 /* 오른쪽 버튼 */
