--- a/index.html
+++ b/index.html
@@ -602,10 +602,20 @@ td, th {
 }
 
 /* 날짜 모드는 절대 영향 안 받음 */
+   
+/* 메모 스크롤바 숨기기 */
+.memo {
+  scrollbar-width: none;      /* Firefox */
+  -ms-overflow-style: none;   /* IE / Edge */
+}
+
+.memo::-webkit-scrollbar {
+  display: none;              /* Chrome / Safari */
+}
 
    
    
-/* .css 붙여넣기 */
+/* .css ㅊㄴㄴ붙여넣기 */
    
 
 
